--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ h1 {
 
 /*Tablette*/
 
-@media and screen (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
 	h1 {
 		margin:auto;
@@ -47,7 +47,7 @@ h1 {
 
 /*Mobile*/
 
-@media and screen (max-width: 480px) {
+@media screen and (max-width: 480px) {
 
 	h1 {
 		margin:auto;
