--- a/style/main.css
+++ b/style/main.css
@@ -372,14 +372,14 @@ article #big{
     z-index: 1;
     font-size: 12px;
     padding: 10px 30px 10px 20px;
-    margin-top: 0;
+    margin: 50px 30px 0 30px;
 }
 
 #big-text #more-container {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     color: #b98e26;
 }
@@ -439,7 +439,7 @@ article #big{
     justify-self: flex-end;
     font-size: 14px;
     padding: 5px 15px 5px 15px;
-    margin: 2vh 0 2vh 0;
+    margin: 20px 41px 20px 0;
 }
 
 /* Footer */
