Basket page + responsive (deck) + news + images for cards pages

--- a/style/cartes_g.css
+++ b/style/cartes_g.css
@@ -32,6 +32,38 @@
     transform: rotateY(180deg);
 }
 
+#card-block1 .container-card:nth-child(1) .front{
+    background-image: url("../images/cartes/1a.webp");
+}
+#card-block1 .container-card:nth-child(2) .front{
+    background-image: url("../images/cartes/2a.webp");
+}
+#card-block1 .container-card:nth-child(3) .front{
+    background-image: url("../images/cartes/3a.webp");
+}
+#card-block1 .container-card:nth-child(4) .front{
+    background-image: url("../images/cartes/1e.webp");
+}
+#card-block1 .container-card:nth-child(5) .front{
+    background-image: url("../images/cartes/2e.webp");
+}
+
+#card-block2 .container-card:nth-child(1) .front{
+    background-image: url("../images/cartes/3e.webp");
+}
+#card-block2 .container-card:nth-child(2) .front{
+    background-image: url("../images/cartes/1t.webp");
+}
+#card-block2 .container-card:nth-child(3) .front{
+    background-image: url("../images/cartes/2t.webp");
+}
+#card-block2 .container-card:nth-child(4) .front{
+    background-image: url("../images/cartes/3t.webp");
+}
+#card-block2 .container-card:nth-child(5) .front{
+    background-image: url("../images/cartes/zeus.webp");
+}
+
 .face{
     position: absolute;
     top: 0;
@@ -41,7 +73,6 @@
 }
 
 .front{
-    background-image: url("../images/carte1.png");
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 2;
@@ -49,7 +80,7 @@
 }
 
 .back{
-    background-image: url("../images/carte4.png");
+    background-image: url("../images/cartes/dos.webp");
     background-size: contain;
     background-repeat: no-repeat;
     transform: rotateY(180deg);
