--- a/style/cartes_n.css
+++ b/style/cartes_n.css
@@ -32,6 +32,38 @@
     transform: rotateY(180deg);
 }
 
+#card-block1 .container-card:nth-child(1) .front{
+    background-image: url("../images/cartes/a1.webp");
+}
+#card-block1 .container-card:nth-child(2) .front{
+    background-image: url("../images/cartes/a2.webp");
+}
+#card-block1 .container-card:nth-child(3) .front{
+    background-image: url("../images/cartes/a3.webp");
+}
+#card-block1 .container-card:nth-child(4) .front{
+    background-image: url("../images/cartes/e1.webp");
+}
+#card-block1 .container-card:nth-child(5) .front{
+    background-image: url("../images/cartes/e2.webp");
+}
+
+#card-block2 .container-card:nth-child(1) .front{
+    background-image: url("../images/cartes/e3.webp");
+}
+#card-block2 .container-card:nth-child(2) .front{
+    background-image: url("../images/cartes/t1.webp");
+}
+#card-block2 .container-card:nth-child(3) .front{
+    background-image: url("../images/cartes/t2.webp");
+}
+#card-block2 .container-card:nth-child(4) .front{
+    background-image: url("../images/cartes/t3.webp");
+}
+#card-block2 .container-card:nth-child(5) .front{
+    background-image: url("../images/cartes/odin.webp");
+}
+
 .face{
     position: absolute;
     top: 0;
@@ -41,7 +73,6 @@
 }
 
 .front{
-    background-image: url("../images/carte1.png");
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 2;
@@ -49,7 +80,7 @@
 }
 
 .back{
-    background-image: url("../images/carte4.png");
+    background-image: url("../images/cartes/dos2.webp");
     background-size: contain;
     background-repeat: no-repeat;
     transform: rotateY(180deg);
