--- a/style/main.css
+++ b/style/main.css
@@ -1,25 +1,4 @@
-@font-face {
-    font-family: "Colus";
-    src: url("font/Colus-Regular.eot");
-    src:
-            url("font/Colus-Regular.woff") format("woff"),
-            url("font/Colus-Regular.woff2") format("woff2"),
-            url("font/Colus-Regular.ttf") format("truetype"),
-            url("font/Colus-Regular.otf") format("opentype")
-}
-
-@font-face {
-    font-family: "Animosa";
-    src: url("font/Animosa-Regular.otf");
-}
-@font-face {
-    font-family: "Animosa-Bold";
-    src: url("font/Animosa-Bold.otf");
-}
-@font-face {
-    font-family: "Animosa-Light";
-    src: url("font/Animosa-light.otf");
-}
+@import url("font.css");
 
 *{
     margin: 0;
@@ -27,6 +6,22 @@
     list-style: none;
     font-family: "Animosa-Bold", sans-serif;
     text-decoration: none;
+}
+
+*::-webkit-scrollbar {
+    background-color: #1d2331;
+    width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background-color: #b98e26;
 }
 
 body{
@@ -108,10 +103,32 @@ body{
     height: 80px;
     background: url("../images/scroll-bar-clair.png") no-repeat center center;
     opacity: 0.7;
+    position: relative;
+    display: inline-block;
 }
-    #nav-end a:hover #language-button{
+    #nav-end #language-button:hover{
         opacity: 1;
     }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1d2331;
+    min-width: 160px;
+    margin-top: -2px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1001;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+#nav-end #language-button-container:hover .dropdown-content {display: block;}
+
 
 .header-container-background{
     background: url("../images/fondbleutexture.png") repeat center center;
@@ -578,3 +595,4 @@ article #big{
     text-align: center;
     padding: 10px 0 10px 0;
 }
+
