--- a/style/histoire.css
+++ b/style/histoire.css
@@ -25,3 +25,17 @@
     font-size: 15px;
     padding: 50px 0 100px 0;
 }
+
+@media screen and (max-width: 1024px) {
+    #page-history .arrow-right{
+        border-width: 5px 30vw 5px 0;
+    }
+
+    #page-history .arrow-left{
+        border-width: 5px 0 5px 30vw;
+    }
+
+    #history-texte{
+        width: 100vw;
+    }
+}
