--- a/style/main.css
+++ b/style/main.css
@@ -10,16 +10,16 @@
 
 *::-webkit-scrollbar {
     background-color: #1d2331;
-    width: 12px;
+    width: 8px;
 }
 
 *::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius: 8px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
     background-color: #b98e26;
 }
@@ -380,9 +380,10 @@ article #big{
 }
 
 #big-text p{
-    font-family: "Animosa", sans-serif;
+    font-family: "Animosa-ExtraLight", sans-serif;
     font-size: 14px;
     margin: 50px 30px 0px 30px;
+    text-align: justify;
 }
 
 #big-article-button{
@@ -417,6 +418,7 @@ article #big{
 
 .small-text p{
     width: 85%;
+    font-family: "Animosa-ExtraLight", sans-serif;
 }
 
 .small-image{
@@ -425,19 +427,19 @@ article #big{
 }
 
 #carte-terre{
-    background: url("../images/terre.png") no-repeat top center;
+    background: url("../images/fond_nymph_terre.webp") no-repeat top center;
     background-size: cover;
     background-position: 0 -30px;
 }
 
 #carte-serpent{
-    background: url("../images/serpent.png") no-repeat top center;
+    background: url("../images/fond_serpent_nordique.webp") no-repeat top center;
     background-size: cover;
     background-position: 0 -40px;
 }
 
 #carte-vent{
-    background: url("../images/vent.png") no-repeat top center;
+    background: url("../images/fond_nymph_air.webp") no-repeat top center;
     background-size: cover;
     background-position: 0 -30px;
 }
@@ -483,9 +485,9 @@ article #big{
 }
 
 .logofoot {
-    height:120px;
+    height:80px;
     width:auto;
-    margin-left:180px;
+    margin-left:220px;
 }
 
 .newsletter {
@@ -582,6 +584,7 @@ article #big{
 }
 
 .imgpartenaires img{
+    opacity: 0.7;
     height: 60px;
     margin: 0 10px 0 10px;
 }
@@ -596,3 +599,41 @@ article #big{
     padding: 10px 0 10px 0;
 }
 
+@media screen and (max-width: 784px) {
+
+}
+
+@media screen and (max-width: 640px) {
+    .conteneurprinc{
+        width: 100%;
+    }
+
+    .reseausoc img{
+        margin: 40px 5vw 40px 5vw;
+    }
+
+    .logofoot{
+        margin-left: 35%;
+    }
+
+    .newsletter{
+        height: 100%;
+    }
+
+    .formemail{
+        width: 90%;
+    }
+
+    #news-text{
+        text-align: justify;
+    }
+
+    .nav-footer{
+        display: block;
+    }
+
+    .imgpartenaires img{
+        width: 10%;
+        height: 10%;
+    }
+}
